Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UWorld.h

	DOTNET_EXPORT auto E_UWorld_HasEndOfFrameUpdates(UWorld* Self)
	{
		return Self->HasEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UWorld_InitializeActorsForPlay(UWorld* Self, INT_PTR InURL, bool bResetTime)
	{
		auto _p0 = *(FURL*)InURL;
		auto _p1 = bResetTime;
		Self->InitializeActorsForPlay(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_InvalidateModelSurface(UWorld* Self, bool bCurrentLevelOnly)
	{
		auto _p0 = bCurrentLevelOnly;
		Self->InvalidateModelSurface(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_IsCameraMoveable(UWorld* Self)
	{
		return Self->IsCameraMoveable();
	}
	DOTNET_EXPORT auto E_UWorld_IsClient(UWorld* Self)
	{
		return Self->IsClient();
	}
	DOTNET_EXPORT auto E_UWorld_IsEditorWorld(UWorld* Self)
	{
		return Self->IsEditorWorld();
	}
	DOTNET_EXPORT auto E_UWorld_IsGameWorld(UWorld* Self)
	{
		return Self->IsGameWorld();
	}
	DOTNET_EXPORT auto E_UWorld_IsInSeamlessTravel(UWorld* Self)
	{
		return Self->IsInSeamlessTravel();
	}
	DOTNET_EXPORT auto E_UWorld_IsMapChangeReady(UWorld* Self)
	{
		return Self->IsMapChangeReady();
	}
	DOTNET_EXPORT auto E_UWorld_IsNavigationRebuilt(UWorld* Self)
	{
		return Self->IsNavigationRebuilt();
	}
	DOTNET_EXPORT auto E_UWorld_IsNetMode(UWorld* Self, ENetMode Mode)
	{
		auto _p0 = Mode;
		return Self->IsNetMode(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_IsPaused(UWorld* Self)
	{
		return Self->IsPaused();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInEditor(UWorld* Self)
	{
		return Self->IsPlayInEditor();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayingReplay(UWorld* Self)
	{
		return Self->IsPlayingReplay();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInMobilePreview(UWorld* Self)
	{
		return Self->IsPlayInMobilePreview();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInPreview(UWorld* Self)
	{
		return Self->IsPlayInPreview();
	}
	DOTNET_EXPORT auto E_UWorld_IsPlayInVulkanPreview(UWorld* Self)
	{
		return Self->IsPlayInVulkanPreview();
	}
	DOTNET_EXPORT auto E_UWorld_IsPreparingMapChange(UWorld* Self)
	{
		return Self->IsPreparingMapChange();
	}
	DOTNET_EXPORT auto E_UWorld_IsPreviewWorld(UWorld* Self)
	{
		return Self->IsPreviewWorld();
	}
	DOTNET_EXPORT auto E_UWorld_IsRecordingClientReplay(UWorld* Self)
	{
		return Self->IsRecordingClientReplay();
	}
	DOTNET_EXPORT auto E_UWorld_IsServer(UWorld* Self)
	{
		return Self->IsServer();
	}
	DOTNET_EXPORT auto E_UWorld_IsVisibilityRequestPending(UWorld* Self)
	{
		return Self->IsVisibilityRequestPending();
	}
	DOTNET_EXPORT auto E_UWorld_Listen(UWorld* Self, INT_PTR InURL)
	{
		auto _p0 = *(FURL*)InURL;
		return Self->Listen(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_MarkActorComponentForNeededEndOfFrameUpdate(UWorld* Self, UActorComponent* Component, bool bForceGameThread)
	{
		auto _p0 = Component;
		auto _p1 = bForceGameThread;
		Self->MarkActorComponentForNeededEndOfFrameUpdate(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_MarkObjectsPendingKill(UWorld* Self)
	{
		Self->MarkObjectsPendingKill();
	}
	DOTNET_EXPORT auto E_UWorld_PerformGarbageCollectionAndCleanupActors(UWorld* Self)
	{
		Self->PerformGarbageCollectionAndCleanupActors();
	}
	DOTNET_EXPORT auto E_UWorld_ProcessLevelStreamingVolumes(UWorld* Self, INT_PTR OverrideViewLocation)
	{
		auto _p0 = (FVector*)OverrideViewLocation;
		Self->ProcessLevelStreamingVolumes(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_PropagateLightingScenarioChange(UWorld* Self)
	{
		Self->PropagateLightingScenarioChange();
	}
	DOTNET_EXPORT auto E_UWorld_RemapCompiledScriptActor(UWorld* Self, char* Str)
	{
		auto _p0 = ConvertFromManage_FString(Str);
		return Self->RemapCompiledScriptActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RemoveActor(UWorld* Self, AActor* Actor, bool bShouldModifyLevel)
	{
		auto _p0 = Actor;
		auto _p1 = bShouldModifyLevel;
		Self->RemoveActor(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_RemoveNetworkActor(UWorld* Self, AActor* Actor)
	{
		auto _p0 = Actor;
		Self->RemoveNetworkActor(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RemovePawn(UWorld* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		Self->RemovePawn(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RemovePIEPrefix(UWorld* Self, char* Source)
	{
		auto _p0 = ConvertFromManage_FString(Source);
		return ConvertToManage_StringWrapper(Self->RemovePIEPrefix(_p0));
	}
	DOTNET_EXPORT auto E_UWorld_RenameToPIEWorld(UWorld* Self, int32 PIEInstanceID)
	{
		auto _p0 = PIEInstanceID;
		Self->RenameToPIEWorld(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_RequiresHitProxies(UWorld* Self)
	{
		return Self->RequiresHitProxies();
	}
	DOTNET_EXPORT auto E_UWorld_RunTickGroup(UWorld* Self, ETickingGroup Group, bool bBlockTillComplete)
	{
		auto _p0 = Group;
		auto _p1 = bBlockTillComplete;
		Self->RunTickGroup(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_SendAllEndOfFrameUpdates(UWorld* Self)
	{
		Self->SendAllEndOfFrameUpdates();
	}
	DOTNET_EXPORT auto E_UWorld_SetActiveLevelCollection(UWorld* Self, int32 LevelCollectionIndex)
	{
		auto _p0 = LevelCollectionIndex;
		Self->SetActiveLevelCollection(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetGameMode(UWorld* Self, INT_PTR InURL)
	{
		auto _p0 = *(FURL*)InURL;
		return Self->SetGameMode(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetMapNeedsLightingFullyRebuilt(UWorld* Self, int32 InNumLightingUnbuiltObjects, int32 InNumUnbuiltReflectionCaptures)
	{
		auto _p0 = InNumLightingUnbuiltObjects;
		auto _p1 = InNumUnbuiltReflectionCaptures;
		Self->SetMapNeedsLightingFullyRebuilt(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_SetSeamlessTravelMidpointPause(UWorld* Self, bool bNowPaused)
	{
		auto _p0 = bNowPaused;
		Self->SetSeamlessTravelMidpointPause(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetShouldTick(UWorld* Self, bool bInShouldTick)
	{
		auto _p0 = bInShouldTick;
		Self->SetShouldTick(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetTimeUntilNextGarbageCollection(UWorld* Self, float MinTimeUntilNextPass)
	{
		auto _p0 = MinTimeUntilNextPass;
		Self->SetTimeUntilNextGarbageCollection(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_SetupParameterCollectionInstances(UWorld* Self)
	{
		Self->SetupParameterCollectionInstances();
	}
	DOTNET_EXPORT auto E_UWorld_SetupPhysicsTickFunctions(UWorld* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->SetupPhysicsTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_ShouldTick(UWorld* Self)
	{
		return Self->ShouldTick();
	}
	DOTNET_EXPORT auto E_UWorld_StartPhysicsSim(UWorld* Self)
	{
		Self->StartPhysicsSim();
	}
	DOTNET_EXPORT auto E_UWorld_StripPIEPrefixFromPackageName(UWorld* Self, char* PackageName, char* Prefix)
	{
		auto _p0 = ConvertFromManage_FString(PackageName);
		auto _p1 = ConvertFromManage_FString(Prefix);
		return ConvertToManage_StringWrapper(Self->StripPIEPrefixFromPackageName(_p0, _p1));
	}
	DOTNET_EXPORT auto E_UWorld_Tick(UWorld* Self, ELevelTick TickType, float DeltaSeconds)
	{
		auto _p0 = TickType;
		auto _p1 = DeltaSeconds;
		Self->Tick(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_TickNetClient(UWorld* Self, float DeltaSeconds)
	{
		auto _p0 = DeltaSeconds;
		Self->TickNetClient(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_TimeSince(UWorld* Self, float Time)
	{
		auto _p0 = Time;
		return Self->TimeSince(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_TransferBlueprintDebugReferences(UWorld* Self, UWorld* NewWorld)
	{
		auto _p0 = NewWorld;
		Self->TransferBlueprintDebugReferences(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_TriggerStreamingDataRebuild(UWorld* Self)
	{
		Self->TriggerStreamingDataRebuild();
	}
	DOTNET_EXPORT auto E_UWorld_UpdateActorComponentEndOfFrameUpdateState(UWorld* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->UpdateActorComponentEndOfFrameUpdateState(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_UpdateAllSkyCaptures(UWorld* Self)
	{
		Self->UpdateAllSkyCaptures();
	}
	DOTNET_EXPORT auto E_UWorld_UpdateCullDistanceVolumes(UWorld* Self, AActor* ActorToUpdate, UPrimitiveComponent* ComponentToUpdate)
	{
		auto _p0 = ActorToUpdate;
		auto _p1 = ComponentToUpdate;
		Self->UpdateCullDistanceVolumes(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_UpdateLevelStreaming(UWorld* Self)
	{
		Self->UpdateLevelStreaming();
	}
	DOTNET_EXPORT auto E_UWorld_UpdateParameterCollectionInstances(UWorld* Self, bool bUpdateInstanceUniformBuffers)
	{
		auto _p0 = bUpdateInstanceUniformBuffers;
		Self->UpdateParameterCollectionInstances(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_UpdateWorldComponents(UWorld* Self, bool bRerunConstructionScripts, bool bCurrentLevelOnly)
	{
		auto _p0 = bRerunConstructionScripts;
		auto _p1 = bCurrentLevelOnly;
		Self->UpdateWorldComponents(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UWorld_UsesGameHiddenFlags(UWorld* Self)
	{
		return Self->UsesGameHiddenFlags();
	}
	DOTNET_EXPORT auto E_UWorld_AreNativePropertiesIdenticalTo(UWorld* Self, UObject* Other)
	{
		auto _p0 = Other;
		return Self->AreNativePropertiesIdenticalTo(_p0);
	}
	DOTNET_EXPORT auto E_UWorld_BeginDestroy(UWorld* Self)
	{
		Self->BeginDestroy();
	}
	DOTNET_EXPORT auto E_UWorld_CheckDefaultSubobjectsInternal(UWorld* Self)
	{
		return Self->CheckDefaultSubobjectsInternal();
	}
	DOTNET_EXPORT auto E_UWorld_FinishDestroy(UWorld* Self)
	{
		Self->FinishDestroy();
	}
	DOTNET_EXPORT auto E_UWorld_GetDesc(UWorld* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDesc());
	}
	DOTNET_EXPORT auto E_UWorld_GetDetailedInfoInternal(UWorld* Self)
	{
		return ConvertToManage_StringWrapper(Self->GetDetailedInfoInternal());
	}